force-app/main/default/objects/CQ_AS_SQX_Teacher__c/CQ_AS_SQX_Teacher__c.object-meta.xml
<CustomObject>
    <label>Teacher</label>
    <nameField>
        <label>Teacher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>