force-app/main/default/objects/CQ_AS_SQX_Teacher__c/fields/CQ_AS_Child_Record__c.field-meta.xml
<CustomField>
    <fullName>CQ_AS_Child_Record__c</fullName>
    <label>Child_Record</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>