force-app/main/default/objects/CQ_AS_SQX_Teacher__c/fields/CQ_AS_Course_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CQ_AS_Course_Start_Date__c</fullName>
    <label>Course Start Date</label>
    <type>Date</type>
</CustomField>