force-app/main/default/objects/CQ_AS_SQX_Teacher__c/fields/CQ_AS_Lab_Title__c.field-meta.xml
<CustomField>
    <fullName>CQ_AS_Lab_Title__c</fullName>
    <label>Lab Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physics Lab</fullName>
            </value>
            <value>
                <fullName>Chemistry Lab</fullName>
            </value>
            <value>
                <fullName>Biology Lab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>