force-app/main/default/objects/CQ_AS_SQX_Teacher__c/fields/CQ_AS_Marksheet__c.field-meta.xml
<CustomField>
    <fullName>CQ_AS_Marksheet__c</fullName>
    <label>Marksheet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>