force-app/main/default/objects/CQ_AS_SQX_Teacher__c/fields/CQ_AS_Sport_Name__c.field-meta.xml
<CustomField>
    <fullName>CQ_AS_Sport_Name__c</fullName>
    <label>Sport Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>