force-app/main/default/objects/CQ_AS_SQX_Teacher__c/fields/CQ_AS_SQX_Account__c.field-meta.xml
<CustomField>
    <fullName>CQ_AS_SQX_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Teachers</relationshipLabel>
    <relationshipName>Teachers</relationshipName>
    <type>Lookup</type>
</CustomField>