force-app/main/default/objects/CQ_AS_SQX_Teacher__c/fields/CQ_AS_Subject__c.field-meta.xml
<CustomField>
    <fullName>CQ_AS_Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Maths</fullName>
            </value>
            <value>
                <fullName>Physics</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Social Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>