force-app/main/default/objects/CQ_AS_SQX_Teacher__c/fields/Subjects_Taught__c.field-meta.xml
<CustomField>
    <fullName>Subjects_Taught__c</fullName>
    <label>Subjects Taught</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Social Science</fullName>
            </value>
            <value>
                <fullName>Maths</fullName>
            </value>
            <value>
                <fullName>Physics</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>