force-app/main/default/objects/CQ_AS_SQX_Teacher__c/validationRules/CQ_AS_Course_Start_Date_Before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>CQ_AS_Course_Start_Date_Before_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>CQ_AS_Course_Start_Date__c &gt;= CQ_AS_Course_End_Date__c</errorConditionFormula>
    <errorMessage>Course Start Date should be less then Course End Date</errorMessage>
</ValidationRule>