force-app/main/default/objects/CQ_AS_SQX_Teacher__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CQ_AS_Course_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>